--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff"
-    tools:context="atpl.cc.localisys.activities.activities.Localisys_HomeActivity">
+    tools:context="atpl.cc.localisys.activities.Localisys_HomeActivity">
 
 
     <FrameLayout
